# ExtractIQ-Engine

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CONTRIBUTING.md  LICENSE  METRIC_VERIFICATION_REPORT.md  MODEL_CARD.md  README.md  ROADMAP.md  SECURITY.md  TREE.md  docker-compose.yml
.github/: FUNDING.yml  SUPPORT.md  pull_request_template.md
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: confidence.py  config.py  exceptions.py  extraction.py  logging.py  main.py  metadata.py  preprocessing.py  repair_logging.py  retry.py  schema.py  settings.py
backend/app/api/: error_models.py  middleware.py  models.py  routes.py  service.py
backend/app/database/: database.py  models.py  repository.py
backend/app/evaluation/: __init__.py  collector.py  metrics.py  models.py  repository.py
backend/app/ingestion/: __init__.py  csv_parser.py  docx_parser.py  json_parser.py  pdf_parser.py  segmenter.py  txt_parser.py
backend/app/services/: health_service.py  metrics_service.py  version_service.py
backend/data/: evaluation_records.jsonl  stress_tickets.jsonl  tickets_sample.jsonl
backend/reports/: evaluation_report.md  evaluation_results_full.json
backend/scripts/: prepare_dataset.py  run_evaluation.py  run_full_evaluation.py
backend/tests/: conftest.py  final_test.py  test_api.py  test_database.py  test_error_handling.py  test_evaluation.py  test_exceptions.py  test_extraction_edge.py  test_health.py  test_implementation.py  test_ingestion.py  test_ingestion_advanced.py  test_ingestion_docx.py  test_ingestion_init.py  test_ingestion_pdf.py  test_integration.py  test_integration_mocked.py  test_main.py  test_repair_loop.py  test_routes_edge.py  test_schema.py  test_settings.py  test_utilities.py  validate_test.py
backend/tests/data/: account_ticket.txt  billing_ticket.txt  broken_ticket.txt  long_ticket.txt  mixed_language_ticket.txt  multiple_issue_ticket.txt  product_ticket.txt  shipping_ticket.txt  technical_ticket.txt  very_noisy_ticket.txt
backend/tests/golden/: account_ticket_expected_output.json  billing_ticket_expected_output.json  broken_ticket_expected_output.json  long_ticket_expected_output.json  mixed_language_ticket_expected_output.json  multiple_issue_ticket_expected_output.json  product_ticket_expected_output.json  shipping_ticket_expected_output.json  technical_ticket_expected_output.json  very_noisy_ticket_expected_output.json
dashboard/: README.md  __init__.py  analytics.py  app.py  charts.py  components.py  config.py  error_analysis.py  exporter.py  health.py  layout.py  loaders.py  styles.py
docs/: api.md  (+10 more)
(+64 files in other folders)
